ブログ更新

--- a/event/index.html
+++ b/event/index.html
@@ -11,14 +11,15 @@ boxshadow: true
   <section class="home__section__innner-sub">
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
-      <li>2024.07.28(日) <a href="https://bunfree.net/event/kagawa01/" target="_blank" rel="noopenner noreferrer">文学フリマ香川1</a>（抽選結果待ち）</li>
+      <li>2024.12.01(日) <a href="https://bunfree.net/event/tokyo39/" target="_blank" rel="noopenner noreferrer">文学フリマ東京39</a></li>
+      <li>2024.09.08(日) <a href="https://bunfree.net/event/osaka12/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪12</a></li>
       <li>2024.06.16(日) <a href="https://bunfree.net/event/iwate09/" target="_blank" rel="noopenner noreferrer">文学フリマ岩手9</a>（抽選落ち＆委託予定）</li>
-      <li>2024.05.19(日) <a href="https://bunfree.net/event/tokyo38/" target="_blank" rel="noopenner noreferrer">文学フリマ東京38</a>→<a href="https://c.bunfree.net/e/bfo" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
     <h2 class="heading--primary heading--color">log</h2>
     <ul class="list__style--dot op_7 event-log__wrapper">
+      <li>2024.05 文学フリマ東京38 <a href="https://c.bunfree.net/e/bfo" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
       <li>2024.01 文学フリマ京都8 <a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
       <li>2023.11 文学フリマ東京37 <a href="https://c.bunfree.net/e/aXs" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
       <li>2023.09 文学フリマ大阪11 <a href="https://c.bunfree.net/c/osaka11/!/F/13" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
