--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: layout.liquid
         <div class="home__news">
           <dl class="home__news-body">
             <dt>update:</dt>
-            <dd>2024.05.29 イベント情報更新</dd>
+            <dd>2024.06.30 イベント情報更新</dd>
             <dt>event:</dt>
-            <dd>2024.06.16 <a href="https://bunfree.net/event/iwate09/" target="_blank" rel="noopenner noreferrer">文学フリマ岩手9</a> 委託参加予定</dd>
+            <dd>2024.09.08 <a href="https://bunfree.net/event/osaka12/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪12</a> 参加予定</dd>
             <dt>blog:</dt>
             <dd>
               {%- assign latestArticle = collections.article | reverse | first -%}
