大阪文フリペーパー公開

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: layout.liquid
         <div class="home__news">
           <dl class="home__news-body">
             <dt>update:</dt>
-            <dd>2024.08.13 イベント情報更新</dd>
+            <dd>2024.09.16 イベント情報更新</dd>
             <dt>event:</dt>
-            <dd>2024.09.08 <a href="https://bunfree.net/event/osaka12/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪12</a> 出店予定｜OMMビル 2F か-08 呼吸書房→<a href="https://c.bunfree.net/e/c2F" target="_blank" rel="noopenner noreferrer">Webカタログ</a></dd>
+            <dd>2024.12.01 <a href="https://bunfree.net/event/tokyo39/" target="_blank" rel="noopenner noreferrer">文学フリマ東京39</a> 出店予定</dd>
             <dt>blog:</dt>
             <dd>
               {%- assign latestArticle = collections.article | reverse | first -%}
