--- a/event/index.html
+++ b/event/index.html
@@ -12,12 +12,12 @@ boxshadow: true
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
       <li>2024.12.01(日) <a href="https://bunfree.net/event/tokyo39/" target="_blank" rel="noopenner noreferrer">文学フリマ東京39</a></li>
-      <li>2024.09.08(日) <a href="https://bunfree.net/event/osaka12/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪12</a> <a href="https://c.bunfree.net/e/c2F" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
     <h2 class="heading--primary heading--color">log</h2>
     <ul class="list__style--dot op_7 event-log__wrapper">
+      <li>2024.09 文学フリマ大阪12 <a href="https://c.bunfree.net/e/c2F" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
       <li>2024.06 文学フリマ岩手9（委託参加のみ）</li>
       <li>2024.05 文学フリマ東京38 <a href="https://c.bunfree.net/e/bfo" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
       <li>2024.01 文学フリマ京都8 <a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
