書籍情報追加＆樹木のバカンス追加

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: layout.liquid
         <div class="home__news">
           <dl class="home__news-body">
             <dt>update:</dt>
-            <dd>2024.11.14 Nobel 寄稿小説更新 →<a href="https://atsea.day/blogs/journal/novel_04" target="_blank" rel="noopenner noreferrer">またたくヴェールの海で</a></dd>
+            <dd>2024.11.28 新刊<a href="/book/postcard_11/">『walking postcard vol.11』</a>情報追加、<a href="/book/trees_light/vacation/">「樹木のバカンス」</a>本文公開</dd>
             <dt>event:</dt>
             <dd>2024.12.01 <a href="https://bunfree.net/event/tokyo39/" target="_blank" rel="noopenner noreferrer">文学フリマ東京39</a> 出店予定｜東京ビッグサイト西3・4ホール こ-13 呼吸書房→<a href="https://c.bunfree.net/e/cvv" target="_blank" rel="noopenner noreferrer">Webカタログ</a></dd>
             <dt>blog:</dt>
