--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@ layout: layout.liquid
             <dt>update:</dt>
             <dd>2024.11.28 新刊<a href="/book/postcard_11/">『walking postcard vol.11』</a>情報追加、<a href="/book/trees_light/vacation/">「樹木のバカンス」</a>本文公開</dd>
             <dt>event:</dt>
+            <dd>2025.02.23 東京/浜松町<a href="https://note.com/bookcultureclub/n/nf484d72c76f4" target="_blank" rel="noopenner noreferrer">ZINEフェス詩歌と日記</a> 出店予定
+            </dd>
+            <!--
             <dd>2025.05.11 <a href="https://bunfree.net/event/tokyo40/" target="_blank" rel="noopenner noreferrer">文学フリマ東京40</a> 出店予定
               {%- comment -%}
               ｜東京ビッグサイト西3・4ホール こ-13 呼吸書房→<a href="https://c.bunfree.net/e/cvv" target="_blank" rel="noopenner noreferrer">Webカタログ</a>
               {%- endcomment -%}
             </dd>
+            -->            
             <dt>blog:</dt>
             <dd>
               {%- assign latestArticle = collections.article | reverse | first -%}
