イベント情報更新

--- a/event/index.html
+++ b/event/index.html
@@ -11,7 +11,7 @@ boxshadow: true
   <section class="home__section__innner-sub">
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
-      <li>2025.05.11(日) <a href="https://bunfree.net/event/tokyo40/" target="_blank" rel="noopenner noreferrer">文学フリマ東京40</a>（東京ビッグサイト）</li>
+      <li>2025.05.11(日) <a href="https://bunfree.net/event/tokyo40/" target="_blank" rel="noopenner noreferrer">文学フリマ東京40</a>｜<a href="https://c.bunfree.net/c/tokyo40/1F/B/81" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
