--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@ layout: layout.liquid
             <dt>update:</dt>
             <dd>2025.4.5 新刊<a href="/book/botanical_1/">『本を片手に植物園 vol.1 Tokyo』</a>情報追加</dd>
             <dt>event:</dt>
-            <dd>2025.05.11 <a href="https://bunfree.net/event/tokyo40/" target="_blank" rel="noopenner noreferrer">文学フリマ東京40</a> 出店予定
-              {%- comment -%}
-              ｜東京ビッグサイト西3・4ホール こ-13 呼吸書房→<a href="https://c.bunfree.net/e/cvv" target="_blank" rel="noopenner noreferrer">Webカタログ</a>
-              {%- endcomment -%}
+            <dd>2025.05.11 <a href="https://bunfree.net/event/tokyo40/" target="_blank" rel="noopenner noreferrer">文学フリマ東京40</a>出店予定 ｜東京ビッグサイト南1・2ホール B-81 呼吸書房→<a href="https://c.bunfree.net/c/tokyo40/1F/B/81" target="_blank" rel="noopenner noreferrer">Webカタログ</a>
             </dd>
             <dt>blog:</dt>
             <dd>
