--- a/about/index.html
+++ b/about/index.html
@@ -47,23 +47,20 @@ boxshadow: true
     <p>Twitterなどで使っているID「feelingskyblue」は、呼吸書房の前身となる創作サイトのURLであると共に、元を辿れば中学時代に書いていた主人公の名前に関連するものでもあります。<br class="hidden-phone">ペンネームではありませんが、愛着のある文字列です。</p>
     <h3 class="heading--default heading--colorDark">I'm here.</h3>
     {%- include '_includes/snipet-sns-list' -%}
-    <p>滞在時間がもっとも多いのはTwitterです。この頃はMisskeyにもちょいちょい居ます。</p>
-    <div class="twitter__wrapper">
-      <a class="twitter-timeline" data-lang="en" data-chrome="transparent noborders" data-height="500" href="https://twitter.com/feelingskyblue?ref_src=twsrc%5Etfw">Tweets by feelingskyblue</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+
     <section class="fleet__wrapper">
       <h3 class="heading--default">fleet</h3>
       <p>こんなページの端っこまで読んでくださってありがとうございます笑。<br>ここにはブログに載せるまでもない短文が書いてあります。いずれブログが作成されたらこのコーナーはそっと消える予定です。</p>
       <p>2023.4.29 <br>長らく先延ばしにしていた個人サイトのリニューアルに本格着手したのは…2023年2月ごろでしょうか。Twitterの先行きがだいぶ怪しくなったことでようやく腰を上げられました。個人サイトという拠点を改めて作り直すにあたって、旧サイトのソースコードぐちゃぐちゃ加減に頭を抱え、古い作品に悶絶し、いやはや大変でした……笑。だいたいデザイン作業に一ヶ月くらい掛かった気がします。そのデザインも実際に実装したのは半分くらいなのでは。<br>実装着手が3月下旬、およそ一ヶ月での突貫リニューアル作業です。これから徐々に機能を増やしてゆけたら良いなあ……。主に以下の機能を追加予定なので、のんびりお待ちくださいね。</p>
       <p>
-        ・小説作品の追加（✅<s>彼らは唯の夢</s>＆novelmber）<br>
+        ・✅<s>小説作品の追加（彼らは唯の夢＆novelmber）</s><br>
         ・小説ページのフォント切り替え機能（ができるサイドバーの実装）<br>
         ・小説ページ（長編）の作成、目次サイドバーもつける<br>
-        ・追従ヘッダー（つけるかも、つけないかも）<br>
+        ・✅<s>ヘッダー（つけるかも、つけないかも）</s><br>
         ・『すべての樹木は光』の特設ページ<br>
         ・✅<s>『すべての樹木は光』試し読みの量を増やす</s><br>
-        ・ブログに類するものの作成<br>
-        ・ダークモード切り替え対応<br>
+        ・✅<s>ブログに類するものの作成</s><br>
+        ・✅<s>ダークモード切り替え対応</s><br>
         ・紀行文コンテンツをTumblrからサイトに移管
         ・朗読コンテンツの埋め込み連携
       </p>
