--- a/event/index.html
+++ b/event/index.html
@@ -11,12 +11,18 @@ boxshadow: true
   <section class="home__section__innner-sub">
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
-      <li>2025.05.11(日) <a href="https://bunfree.net/event/tokyo40/" target="_blank" rel="noopenner noreferrer">文学フリマ東京40</a>｜<a href="https://c.bunfree.net/c/tokyo40/1F/B/81" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
+      <li>2026.1.18(日) <a href="https://bunfree.net/event/kyoto10/" target="_blank" rel="noopenner noreferrer">文学フリマ京都10</a></li>
+      <li>2025.11.29(土)〜30(日) <a href="https://picrea.jp/event/c630fa554a3327d2a262e8705178781847b4d64a421fb94362214e718c4fb578" target="_blank" rel="noopenner noreferrer">みすけっと - Misskey系サーバー合同Web同人誌即売会 -</a></li>
+      <li>2025.11.23(日) <a href="https://bunfree.net/event/tokyo41/" target="_blank" rel="noopenner noreferrer">文学フリマ東京41</a></li>
+      {%- comment -%}
+        <li>2025.11.23(日) <a href="https://bunfree.net/event/tokyo41/" target="_blank" rel="noopenner noreferrer">文学フリマ東京41</a>｜<a href="https://c.bunfree.net/c/tokyo40/1F/B/81" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
+      {%- endcomment -%}
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
     <h2 class="heading--primary heading--color">log</h2>
     <ul class="list__style--dot op_7 event-log__wrapper">
+      <li>2025.05 文学フリマ東京40 <a href="https://c.bunfree.net/c/tokyo40/1F/B/81" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
       <li>2025.03 <a href="https://tamacomi.info/" target="_blank" rel="noopenner noreferrer">第10回TAMAコミ</a>（東京/八王子）</li>
       <li>2025.02 <a href="https://note.com/bookcultureclub/n/nf484d72c76f4" target="_blank" rel="noopenner noreferrer">ZINEフェス詩歌と日記</a></li>
       <li>2024.12 文学フリマ東京39 <a href="https://c.bunfree.net/e/cvv" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
