イベント情報更新

--- a/event/index.html
+++ b/event/index.html
@@ -13,10 +13,7 @@ boxshadow: true
     <ul class="list__style--dot">
       <li>2026.1.18(日) <a href="https://bunfree.net/event/kyoto10/" target="_blank" rel="noopenner noreferrer">文学フリマ京都10</a></li>
       <li>2025.11.29(土)〜30(日) <a href="https://picrea.jp/event/c630fa554a3327d2a262e8705178781847b4d64a421fb94362214e718c4fb578" target="_blank" rel="noopenner noreferrer">みすけっと - Misskey系サーバー合同Web同人誌即売会 -</a></li>
-      <li>2025.11.23(日) <a href="https://bunfree.net/event/tokyo41/" target="_blank" rel="noopenner noreferrer">文学フリマ東京41</a></li>
-      {%- comment -%}
-        <li>2025.11.23(日) <a href="https://bunfree.net/event/tokyo41/" target="_blank" rel="noopenner noreferrer">文学フリマ東京41</a>｜<a href="https://c.bunfree.net/c/tokyo40/1F/B/81" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
-      {%- endcomment -%}
+      <li>2025.11.23(日) <a href="https://bunfree.net/event/tokyo41/" target="_blank" rel="noopenner noreferrer">文学フリマ東京41</a>｜<a href="https://c.bunfree.net/e/g2U" target="_blank" rel="noopenner noreferrer">Webカタログ</a></li>
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
