無配ペーパー更新＆イベント更新

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: layout.liquid
         <div class="home__news">
           <dl class="home__news-body">
             <dt>update:</dt>
-            <dd>2025.11.17 新刊『<a href="/book/postcard_12/">walking postcard vol.12</a>』情報追加</dd>
+            <dd>2025.12.25 イベント情報更新</dd>
             <dt>event:</dt>
-            <dd>2025.11.23 <a href="https://bunfree.net/event/tokyo41/" target="_blank" rel="noopenner noreferrer">文学フリマ東京41</a>｜東京ビッグサイト南3・4ホール う-50 呼吸書房→<a href="https://c.bunfree.net/e/g2U" target="_blank" rel="noopenner noreferrer">Webカタログ</a>
+            <dd>2026.1.18 <a href="https://bunfree.net/event/kyoto10/" target="_blank" rel="noopenner noreferrer">文学フリマ京都10</a>｜京都市勧業館「みやこめっせ」 1F 第二展示場 	B-21 呼吸書房→<a href="https://c.bunfree.net/e/gSB" target="_blank" rel="noopenner noreferrer">Webカタログ</a>
             </dd>
             <dt>blog:</dt>
             <dd>
